--- a/myPlaces/Base.lproj/Main.storyboard
+++ b/myPlaces/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--My Places-->
         <scene sceneID="wyu-lG-UPr">
             <objects>
                 <tableViewController id="eq1-oF-18j" customClass="MainViewController" customModule="myPlaces" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,7 +29,7 @@
                             <outlet property="delegate" destination="eq1-oF-18j" id="yeJ-xG-mbQ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="2EC-Fl-idl"/>
+                    <navigationItem key="navigationItem" title="My Places" id="2EC-Fl-idl"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hsM-oa-irb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -42,6 +42,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UUv-9o-qo7">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="SnellRoundhand-Bold" family="Snell Roundhand" pointSize="24"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="eq1-oF-18j" kind="relationship" relationship="rootViewController" id="y61-KZ-1uG"/>
